<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ui.details.RecipeDetailsActivity"
    tools:showIn="@layout/activity_recipe_details">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/llBottomView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:orientation="vertical"
            android:padding="10dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/ivRecipeDetails"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:src="@drawable/ic_bg_placeholder"
                    android:scaleType="fitXY" />

                <TextView
                    android:id="@+id/tvCategory"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:background="@color/colorLightTransparent"
                    android:fontFamily="@font/montserrat_semi"
                    android:gravity="center"
                    android:padding="10dp"
                    android:alpha="0.6"
                    android:textColor="@color/colorTextWhite" />
            </RelativeLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/montserrat_semi"
                android:text="@string/recipe_name"
                android:textColor="@color/colorText" />

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/montserrat"
                android:textColor="@color/colorText2" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/montserrat_semi"
                android:text="@string/duration"
                android:textColor="@color/colorText" />

            <TextView
                android:id="@+id/tvDuration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/montserrat"
                android:textColor="@color/colorText2" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/montserrat_semi"
                android:text="@string/ingredient"
                android:textColor="@color/colorText" />

            <TextView
                android:id="@+id/tvIngredient"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:fontFamily="@font/montserrat"
                android:textColor="@color/colorText2" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/montserrat_semi"
                android:text="How to do?"
                android:textColor="@color/colorText" />

            <TextView
                android:id="@+id/tvSteps"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:fontFamily="@font/montserrat"
                android:textColor="@color/colorText2" />


        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/llBottomView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:padding="5dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:backgroundTint="@color/colorRed"
            android:fontFamily="@font/montserrat_semi"
            android:text="@string/delete"
            android:textAllCaps="false" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:fontFamily="@font/montserrat_semi"
            android:text="@string/edit"
            android:textAllCaps="false" />

    </LinearLayout>
</RelativeLayout>