<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ui.addedit.AddEditActivity"
    tools:showIn="@layout/activity_add_edit">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnSave"
        android:layout_alignParentTop="true"
        android:nestedScrollingEnabled="true"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="200dp">

                <ImageView
                    android:id="@+id/ivRecipe"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_bg_placeholder" />

                <ImageView
                    android:id="@+id/ivCapture"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:layout_margin="10dp"
                    android:src="@android:drawable/ic_menu_camera" />
            </RelativeLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/montserrat_semi"
                android:text="@string/category"
                android:textColor="@color/colorText" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/bg_outline">


                <androidx.appcompat.widget.AppCompatSpinner
                    android:id="@+id/spinnerCategory"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:entries="@array/category_type"
                    android:padding="10dp" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/montserrat_semi"
                android:text="@string/recipe_name"
                android:textColor="@color/colorText" />

            <EditText
                android:id="@+id/etRecipeName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:inputType="textCapSentences" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/montserrat_semi"
                android:text="@string/duration_in_minutes"
                android:textColor="@color/colorText" />

            <EditText
                android:id="@+id/etRecipeDuration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:inputType="numberDecimal" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/montserrat_semi"
                android:text="@string/ingredient"
                android:textColor="@color/colorText" />

            <EditText
                android:id="@+id/etRecipeIngredient"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@android:drawable/edit_text"
                android:ems="10"
                android:fontFamily="@font/montserrat"
                android:gravity="start|top"
                android:inputType="textMultiLine"
                android:minLines="4"
                android:overScrollMode="always"
                android:scrollbarStyle="insideInset"
                android:scrollbars="vertical" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/montserrat_semi"
                android:text="Steps"
                android:textColor="@color/colorText" />

            <EditText
                android:id="@+id/etRecipeSteps"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@android:drawable/edit_text"
                android:ems="10"
                android:fontFamily="@font/montserrat"
                android:gravity="start|top"
                android:inputType="textMultiLine"
                android:minLines="4"
                android:overScrollMode="always"
                android:scrollbarStyle="insideInset"
                android:scrollbars="vertical" />


        </LinearLayout>
    </ScrollView>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:fontFamily="@font/montserrat_semi"
        android:text="@string/save"
        android:textAllCaps="false" />


</RelativeLayout>